# LPCore

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  acinclude.m4  autogen.sh  configure.ac  configure.in  get_distro.sh  get_target.sh  lpcore.pc.in  lpcore.spec.in  rc.lpcodecpool.in  rc.lpcored.in
conf/: Makefile.am  lpautocue.conf-sample  lpautoroute.conf-sample  lpcodecpool.conf-sample  lpcore.conf-sample  lpgreenroom.conf-sample  lpmiccontrol.conf-sample  lpnetrouter.conf-sample  lpremotebutton.conf-sample
docs/: BUSSES.txt  ENGINES.txt  METADATA.txt  Makefile.am  SWITCHERS.txt  TEXT.txt  panel_protocol.odt  pool_protocol.odt
icons/: Makefile.am  logitek-16x16.xpm  logitek-22x22.xpm  logitek-32x32.xpm  logitek-48x48.xpm  logitek.res  lpcodecpool-16x16.xpm
lib/: Makefile.am  Makefile.in
lib/lpcore/: Makefile.am  lpcmdswitch.cpp  lpcmdswitch.h  lpconfig.cpp  lpconfig.h  lpconnection.cpp  lpconnection.h  lpengine.cpp  lpengine.h  lpmessage.cpp  lpmessage.h  lpparser.cpp  lpparser.h  lpprofile.cpp  lpprofile.h  lpstreamcmdserver.cpp  lpstreamcmdserver.h  lpswitcher.cpp  lpswitcher.h  lpswitcherfactory.cpp  lpswitcherfactory.h  lpttydevice.cpp  lpttydevice.h  switcher_am16.cpp  switcher_am16.h  switcher_btss82.cpp  switcher_btss82.h  switcher_dummy.cpp  switcher_dummy.h  switcher_gpio.cpp  switcher_gpio.h  switcher_sas16000.cpp  switcher_sas16000.h  switcher_zephyrclassic.cpp  switcher_zephyrclassic.h  switcher_zephyrxtreme.cpp  switcher_zephyrxtreme.h
lpautocue/: Makefile.am  lpautocue.cpp  lpautocue.h  surface.cpp  surface.h
lpautoroute/: Makefile.am  lpautoroute.cpp  lpautoroute.h  switch.cpp  switch.h
lpcodecpool/: .gitignore  Makefile.am  clicklabel.cpp  clicklabel.h  codecs.cpp  codecs.h  codecwidget.cpp  codecwidget.h  devices.cpp  devices.h  lpcodecpanel.cpp  lpcodecpanel.h  lpcodecpool.cpp  lpcodecpool.h  rooms.cpp  rooms.h  statuslight.cpp  statuslight.h
lpcore/: Makefile.am  lpcore.cpp  lpcore.h
lpcored/: Makefile.am  ae_engine.cpp  ae_engine.h  apphost.cpp  apphost.h  connection.cpp  connection.h  engine.cpp  engine.h  enginefactory.cpp  enginefactory.h  lpcored.cpp  lpcored.h  switcher_engine.cpp  switcher_engine.h
lpgreenroom/: Makefile.am  lpgreenroom.cpp  lpgreenroom.h  room.cpp  room.h
lpmiccontrol/: Makefile.am  lpmiccontrol.cpp  lpmiccontrol.h  mic.cpp  mic.h
lpnetrouter/: Makefile.am  destination.cpp  destination.h  lpnetrouter.cpp  lpnetrouter.h  lppanel.cpp  lppanel.h  pushbutton.cpp  pushbutton.h  source.cpp  source.h  streamcmdserver.cpp  streamcmdserver.h
lpremotebutton/: Makefile.am  button.cpp  button.h  lpremotebutton.cpp  lpremotebutton.h
lpswitch/: Makefile.am  dialer.cpp  dialer.h  gpiindicator.cpp  gpiindicator.h  lpswitch.cpp  lpswitch.h  statuslight.cpp  statuslight.h
xdg/: Makefile.am  lpcodecpool-lpcodecpanel.desktop  lpnetrouter-lppanel.desktop
