## automake.am
##
## conf/ automake.am
##
## (C) Copyright 2013 Fred Gleason <fredg@paravelsystems.com>
##
##      $Id: Makefile.am,v 1.3 2013/11/21 22:54:39 cvs Exp $
##
##   This program is free software; you can redistribute it and/or modify
##   it under the terms of the GNU General Public License version 2 as
##   published by the Free Software Foundation.
##
##   This program is distributed in the hope that it will be useful,
##   but WITHOUT ANY WARRANTY; without even the implied warranty of
##   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
##   GNU General Public License for more details.
##
##   You should have received a copy of the GNU General Public
##   License along with this program; if not, write to the Free Software
##   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
##
##
## Use automake to process this into a Makefile.in

EXTRA_DIST = lpautocue.conf-sample\
             lpautoroute.conf-sample\
             lpcore.conf-sample\
             lpgreenroom.conf-sample\
             lpmiccontrol.conf-sample\
             lpnetrouter.conf-sample\
             lpremotebutton.conf-sample

CLEANFILES = *~
DISTCLEANFILES = 
MAINTAINERCLEANFILES = *~ Makefile.in configure aclocal.m4
